syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/algol-84/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse) {
    // В опциях описываем метод http
    option (google.api.http) = {
      // указаваем метод http и путь до ручки
      post: "/chat/v1/create"
      // "*" все что приходит - это боди
      body: "*"
    };  
  }
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/chat/v1/delete"
    };
  }
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/chat/v1/send-message"
      body: "*"
    };
  }
}

message Chat {
  repeated string usernames = 1  [(validate.rules).repeated = {
    min_items: 1, // Минимальное количество элементов
    unique: true,  // Уникальность элементов
    items: {
      string: { // Правила для каждого элемента
        min_len: 1, // Минимальная длина строки
        max_len: 50 // Максимальная длина строки
      }
    }
  }];
}

message CreateRequest {
  Chat chat = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}